# jax-lm

./: README.md  assignment.md  pyproject.toml
jax_impl/: data.py
jax_impl/basic/: __init__.py  config.yaml  model.py  train.py
jax_impl/distributed/: config.yaml  model.py  train.py
jax_tests/: adapters.py  test_sharding.py
pytorch_impl/: data.py
pytorch_impl/basic/: __init__.py  config.yaml  model.py  train.py
pytorch_impl/distributed/: __init__.py  config.yaml  model.py  train.py
pytorch_tests/: adapters.py
scripts/: launch_jax_train.sh  launch_train.sh  launch_train_basic.sh
