[project]
name = "jax_impl"
version = "1.0.5"
description = "CS336 Assignment 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1", # tensor operations
    "einx>=0.3.0", # more general tensor operations
    "flax>=0.10.0",
    "ipykernel>=6.29.0", # Jupyter kernel
    "rich>=13.0.0", # Beautiful TUI
    "jaxtyping>=0.3.0", # type hints for pytorch/jax/numpy
    "optax>=0.2.0",
    "jupyter>=1.0.0",
    "numpy",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6",
    "submitit>=1.5.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "ty>=0.0.1a16",
]

[dependency-groups]
cuda = [
    "jax[cuda13]==0.8.2; sys_platform == 'linux'",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jax_impl"
module-root = ""

[tool.uv]
package = true
default-groups = ["cuda"]

# Critical: when you're inside a conda env, force uv to use *that* python
# (prevents "managed" python / CUDA stack mismatches)
python-preference = "only-system"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]

[tool.basedpyright]
typeCheckingMode = "basic"   # or "off" if you want silence
